WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136633
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=136633
Summary
[WinCairo] Compile error.
peavo
Reported
2014-09-08 09:15:07 PDT
Compiling AudioHardwareListener.cpp, I get the following compile error: AudioHardwareListener.h(35) : error C2365 : 'Unknown' : redefinition; previous definition was 'enumerator' (..\html\HTMLElementsAllInOne.cpp) C:\WebKit\Source\WebCore\platform\network\HTTPParsers.h(84) : see declaration of 'Unknown'.
Attachments
Patch
(1.72 KB, patch)
2014-09-08 09:18 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(1.03 KB, patch)
2014-09-08 10:16 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-09-08 09:18:24 PDT
Created
attachment 237791
[details]
Patch
peavo
Comment 2
2014-09-08 10:16:28 PDT
Created
attachment 237793
[details]
Patch
peavo
Comment 3
2014-09-08 10:17:47 PDT
(In reply to
comment #2
)
> Created an attachment (id=237793) [details] > Patch
Previous patch caused some new compile errors.
Darin Adler
Comment 4
2014-09-08 10:26:15 PDT
Comment on
attachment 237793
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237793&action=review
> Source/WebCore/platform/audio/AudioHardwareListener.h:34 > +enum class AudioHardwareActivityType {
I’m amazed that this compiles without adding AudioHardwareActivityType:: prefixes in various places. But if it does, great!
WebKit Commit Bot
Comment 5
2014-09-08 11:54:21 PDT
Comment on
attachment 237793
[details]
Patch Clearing flags on attachment: 237793 Committed
r173391
: <
http://trac.webkit.org/changeset/173391
>
WebKit Commit Bot
Comment 6
2014-09-08 11:54:25 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 7
2014-09-08 12:21:00 PDT
(In reply to
comment #4
)
> (From update of
attachment 237793
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=237793&action=review
> > > Source/WebCore/platform/audio/AudioHardwareListener.h:34 > > +enum class AudioHardwareActivityType { > > I’m amazed that this compiles without adding AudioHardwareActivityType:: prefixes in various places. But if it does, great!
Seems to build on all builders, thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug