[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=136633

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-09-08
Reviewed by Darin Adler.

Enum name has already been defined.

* platform/audio/AudioHardwareListener.h:

Canonical link: https://commits.webkit.org/154450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173391 268f45cc-cd09-0410-ab3c-d52691b4dbfc